# SSCC-OSLecture

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: build.yml
cmake/amd64/: Toolchain.cmake
cmake/ia32/: Toolchain.cmake
scripts/: gdb.sh  materialize_student_stage.sh  mkdisk.sh  run.sh
study/: README.md
study/session01_ot/: README.md
study/session02_stage0/: FILES.lst  MANIFEST.tsv  bios_CMakeLists.txt  mkdisk.sh  root_CMakeLists.txt  stage1.S  vellum_CMakeLists.txt
study/session03_protected_mode/: FILES.lst  MANIFEST.tsv  bios_CMakeLists.txt  gdt.c  init.c  mkdisk.sh  root_CMakeLists.txt  stage1.S  stage1.c  vellum_CMakeLists.txt
study/session04_memory/: FILES.lst  MANIFEST.tsv  START_MANIFEST.tsv  bios_CMakeLists.txt  init.c  mm.c  start_mm.c
study/session05_drivers/: FILES.lst  MANIFEST.tsv  START_MANIFEST.tsv  bios_CMakeLists.txt  device.c  init.c  start_uart_isa.c  uart_isa.c
study/session06_bios_video/: FILES.lst  MANIFEST.tsv  START_MANIFEST.tsv  bios_CMakeLists.txt  init.c  start_video.c  video.c  vmode.c
study/session07_libc/: FILES.lst  MANIFEST.tsv  START_MANIFEST.tsv  bios_CMakeLists.txt  init.c  memcpy.c  memmove.c  start_init.c  start_memcpy.c  start_memmove.c  start_memset.c  start_strnlen.c  start_vcprintf.c  string_memory.c  strnlen.c
study/session08_shell/: FILES.lst  MANIFEST.tsv  START_MANIFEST.tsv  bios_CMakeLists.txt  init.c  main.c  shell.c  start_parse.c  start_readline.c  start_shell.c  variable.c
study/session09_graphics/: FILES.lst  MANIFEST.tsv  START_MANIFEST.tsv  bios_CMakeLists.txt  device.c  init.c  main.c  start_vga.c
study/session10_fat/: FILES.lst  MANIFEST.tsv  START_MANIFEST.tsv  bios_CMakeLists.txt  fat_readonly.c  init.c  start_fat.c
study/session11_elf/: FILES.lst  MANIFEST.tsv  START_MANIFEST.tsv  bios_CMakeLists.txt  elf.c  elf_loader.c  init.c  mm.c  start_elf.c  vellum_CMakeLists.txt
study/session12_showcase/: README.md
vellum/: config.h  exported_symbols.txt
vellum/acpi/: CMakeLists.txt  log.c  map.c
vellum/arch/ia32/: CMakeLists.txt  cpu_mode.S  cpufeatures.c
vellum/arch/ia32/include/bits/: setjmp.h
vellum/arch/ia32/include/vellum/arch/: cpufeatures.h  elf.h  farptr.h  gdt.h  idt.h  interrupt.h  io.h  mmu.h  processor.h
vellum/arch/ia32/include/vellum/arch/intrinsics/: cpuid.h  gdt.h  idt.h  invlpg.h  io.h  misc.h  rdtsc.h  register.h
vellum/arch/ia32/pc/bios/: CMakeLists.txt  fdboot.S  gdt.c  init.c  instruction.c  isr.c  ldscript_stage1.lds  panic.c  pic.c  power.c  stage1.c
vellum/arch/ia32/pc/bios/acpi/: CMakeLists.txt  rsdp.c
vellum/arch/ia32/pc/bios/apm/: CMakeLists.txt  aa.c  apm.c
vellum/arch/ia32/pc/bios/bios/: apm.c  bioscall.S  bootnext.S  disk.c  keyboard.c  mem.c  misc.c
vellum/arch/ia32/pc/bios/include/vellum/plat/: apm.h  gdt.h  gdt_constants.h  instruction.h  isr.h  page.h  panic.h  pic.h  power.h  time.h
vellum/arch/ia32/pc/bios/include/vellum/plat/bios/: apm.h  bioscall.h  bootinfo.h  disk.h  keyboard.h  mem.h  misc.h  vbe_pmi.h  video.h
vellum/arch/ia32/pc/bios/include/vellum/plat/pci/: cfgspace.h
vellum/arch/ia32/pc/bios/pci/: CMakeLists.txt  cfgspace.c
vellum/arch/ia32/pc/bios/shell/: CMakeLists.txt  bootnext.c  dispinfo.c  drvinfo.c
vellum/arch/ia32/pc/bios/vbe/: CMakeLists.txt  pm_info.c
vellum/arch/ia32/pc/uefi/: CMakeLists.txt  init.c
vellum/config/: boot.json
vellum/core/: CMakeLists.txt  cleanup.c  path.c
vellum/debug/: CMakeLists.txt  hexdump.c  log.c
vellum/device/: CMakeLists.txt
vellum/device/block/: CMakeLists.txt  ata.c  ata.h  atapi.c  atapi.h  fdc_isa.c  floppy.c  ide_isa.c
vellum/device/char/: CMakeLists.txt  ansiterm.c  debugout.c  ieee1284_isa.c  uart_isa.c
vellum/device/hid/: CMakeLists.txt  i8042.c  ps2_keyboard.c  ps2_mouse.c
vellum/device/rtc/: CMakeLists.txt  rtc_isa.c
vellum/device/usb/: common.h
vellum/device/video/: CMakeLists.txt  vconsole.c  vga.c
vellum/elf/: CMakeLists.txt
vellum/encoding/: CMakeLists.txt  cp437.c
vellum/filesystem/: CMakeLists.txt  fs.c
vellum/filesystem/fat/: CMakeLists.txt  fat.c  fat.h
vellum/filesystem/iso9660/: CMakeLists.txt  iso9660.c  iso9660.h
vellum/font/: CMakeLists.txt  font.c
vellum/include/: assert.h  byteswap.h  ctype.h  endian.h  errno.h  fcntl.h  inttypes.h  limits.h  math.h  memory.h  setjmp.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h  wchar.h
vellum/include/sys/: types.h
vellum/include/vellum/: cleanup.h  compiler.h  debug.h  device.h  disk.h  elf.h  filesystem.h  font.h  global_configs.h  hid.h  json.h  log.h  macros.h  mm.h  module.h  panic.h  path.h  resource.h  shell.h  status.h  types.h
vellum/json/: CMakeLists.txt  json.c
vellum/lib/: .gitignore  CMakeLists.txt
vellum/lib/getopt/: CMakeLists.txt  getopt.c
vellum/lib/getopt/include/: getopt.h
vellum/lib/liballoc/: CMakeLists.txt  internal.h  liballoc.c  platform.c
vellum/lib/liballoc/include/: liballoc.h
vellum/lib/libatomic/: CMakeLists.txt  libatomic.c
vellum/mm/: CMakeLists.txt  mm.c
vellum/module/: CMakeLists.txt  module.c  symbol.c  symbol.h
vellum/modules/: CMakeLists.txt
vellum/modules/guishell/: CMakeLists.txt  bitmap.h  color.c  color.h  cursor_data.c  draw.c  draw.h  main.c  types.h  window.h
vellum/modules/helloworld/: CMakeLists.txt  main.c
vellum/pci/: CMakeLists.txt  class.c  id.c  scan.c
vellum/shell/: CMakeLists.txt  parse.c  readline.c  shell.c  variable.c
vellum/shell/commands/: CMakeLists.txt  acpi.c  chdir.c  clear.c  cpuid.c  crc32.c  dispimg.c  echo.c  in.c  jump.c  loadmodule.c  lsdev.c  lsfile.c  lsfs.c  lsmod.c  mem.c  mount.c  out.c  poweroff.c  read.c  readblk.c  readfile.c  reboot.c  testmouse.c  testtty.c  time.c  usefont.c  vmode.c  write.c
vellum/stdc/assert/: CMakeLists.txt  __assert_fail.c
vellum/stdc/ctype/: CMakeLists.txt  ctype.c
vellum/stdc/errno/: CMakeLists.txt
vellum/stdc/stdio/: CMakeLists.txt  fclose.c  fflush.c  fgets.c  fopen.c  fprintf.c  fread.c  freopendevice.c  fseek.c  ftell.c  fwrite.c  printf.c  snprintf.c  sprintf.c  stdio.c  vcprintf.c  vfprintf.c  vprintf.c  (+2 more)
(+58 files in other folders)
